fix: allow production frontend origin in CORS config