@@ -1,5 +1,6 @@
 package com.project.interviewai.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -12,15 +13,15 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
+    @Value("${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}")
+    private String allowedOrigins;
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Allow frontend origins
-        configuration.setAllowedOrigins(List.of(
-                "http://localhost:3000",   // Next.js dev server
-                "http://localhost:5173"    // Vite dev server (if used)
-        ));
+        // Allow frontend origins (configurable via CORS_ALLOWED_ORIGINS env var)
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
 
         // Allow HTTP methods
         configuration.setAllowedMethods(Arrays.asList(
